# cyber-language-server

./: .gitignore  .project.nvim  Cargo.toml  README.md  justfile  rust-toolchain.toml
crates/cyber-highlight/: Cargo.toml
crates/cyber-highlight/src/: lib.rs
crates/cyber-lsp/: Cargo.toml
crates/cyber-lsp/config/: config.toml
crates/cyber-lsp/lang_docs/completions/: completions.json
crates/cyber-lsp/lang_docs/hover/: hover.json
crates/cyber-lsp/language/completions/: import.md  keywords.md
crates/cyber-lsp/src/: backend.rs  complete.rs  completions.rs  datatypes.rs  diagnostics.rs  documents.rs  handlers.rs  languageserver.rs  macros.rs  main.rs  semantic_tokens.rs  utils.rs
crates/cyber-lsp/src/completions/: scanner.rs
crates/cyber-lsp/src/documents/: document.rs  documents.rs  macros.rs
crates/cyber-lsp/src/utils/: doc_loader.rs  docloader.rs  treehelper.rs
crates/cyber-tree-sitter/: Cargo.toml
crates/cyber-tree-sitter/src/: lib.rs
crates/cyber-tree-sitter/tests/: parsing_tests.rs
lang_docs/completions/: completions.json
lang_docs/hover/: hover.json
scripts/: build.ps1
