[package]
name = "cyberls"
version = "0.1.0"
edition = "2021"
description = "A Cyber Language Server"
homepage = "https://github.com/instance-id/cyber-language-server"
authors = ["instance.id <dan@instance.id>"]
keywords = ["lsp", "language-server", "cyber"]

[dependencies]
clap = "4.1.13"
glob = "0.3.1"
regex = "1"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
lsp-types = "0.94.0"
tracing-subscriber = "0.3"
tree-sitter = "0.20.9"
cyber-highlight = { path = "../cyber-highlight/" }
cyber-tree-sitter = { path = "../cyber-tree-sitter/" }
once_cell = "1.17.1"
anyhow = "1.0.70"
cli-table = "0.4.7"
tracing = "0.1.37"
serde_derive = "1.0.158"
tracing-appender = "0.2.2"
dashmap = { version = "5.4.0" , features = ["serde"] }
ropey = "1.6.0"
lazy_static = "1.4.0"


[dev-dependencies]
async-tungstenite = { version = "0.20.0", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
tokio = { version = "1.17", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
ws_stream_tungstenite = { version = "0.9", features = ["tokio_io"] }

[[bin]]
name = "cyberls"
path = "src/main.rs"
